<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ebeef5"
        android:orientation="vertical">

        <im.zego.expressample.faceu.demo.view.TitleLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:name="@string/tx_video_filter">

            <Button
                android:id="@+id/go_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/ic_round_left" />

        </im.zego.expressample.faceu.demo.view.TitleLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/videofilterTypeDescribe"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="3dp"
                    android:background="@mipmap/ic_mark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:text="@string/tx_filter_way"
                    android:textStyle="bold" />

            </LinearLayout>
            <RadioGroup
                android:id="@+id/captureOrProcess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/videoCapture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/use_video_capture">

                </RadioButton>

                <RadioButton
                    android:id="@+id/videoProcess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_video_process" />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/videoBufferTypeDescribe"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="3dp"
                    android:background="@mipmap/ic_mark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:text="@string/tx_filter_type"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/zegoCustomCapture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/captureBufferType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <RadioButton
                        android:id="@+id/captureMem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"

                        android:text="@string/tx_asyn_i420_mem" />


                    <RadioButton
                        android:id="@+id/captureSurfaceTexture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/tx_surface_texture" />


                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/zegoProcess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical"
                android:visibility="gone">

                <RadioGroup
                    android:id="@+id/processBufferType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <RadioButton
                        android:id="@+id/processTexture2D"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"

                        android:text="@string/tx_sync_gl_texture_2d" />


                    <RadioButton
                        android:id="@+id/processSurfaceTexture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/tx_surface_texture" />


                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="roomID:"
                    android:textSize="14sp" />

            </LinearLayout>

            <im.zego.expressample.faceu.demo.view.CustomEditText
                android:id="@+id/ed_room_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@color/white_color"
                android:hint="请输入roomID"
                android:padding="8dp"
                android:textSize="14sp"
                app:key="room_id" />

            <TextView
                android:id="@+id/login_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:autoLink="all"
                android:gravity="center_vertical"
                android:text="@string/room_id_describe" />

            <TextView
                android:id="@+id/authpack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_32" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="onClickLoginRoomAndPublish"
                android:text="@string/tx_login_room" />
            <TextView
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:id="@+id/zego_sdk_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:id="@+id/faceunity_sdk_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>
    </LinearLayout>
</layout>